--- a/class-3/index.html
+++ b/class-3/index.html
@@ -14,7 +14,7 @@
 
 	<div class="video-area">
 		<div class="video-area-bg">
-			<a class="video-play-btn mfp-iframe" href="video/video.mp4"><i class="fa fa-play"></i></a>
+			<a class="video-play-btn mfp-iframe" href="https://www.youtube.com/watch?v=Jud_s0f7RKU"><i class="fa fa-play"></i></a>
 		</div>
 		<div class="container">
 			<div class="row">
