Autoplay tiem set

--- a/100section/class-7/index.html
+++ b/100section/class-7/index.html
@@ -93,7 +93,7 @@
 			nav: true,
 			navText: ["<i class='fa fa-long-arrow-left'</i>","<i class='fa fa-long-arrow-right'</i>"],
 			dots: false,
-			autoplay: false,
+			autoplay: 3000,
 			responsiveClass: true,
 		    responsive: {
 		        0: {
