--- a/100section/class-11/index.html
+++ b/100section/class-11/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 	<!--title-->
-    <title>Fashion</title>
+    <title>Fashion | Class 11</title>
 	<link rel="shortcut icon" type="image/x-icon" href="" />
 	
 	<!--CSS-->
