--- a/100section/class-20/index.html
+++ b/100section/class-20/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--title--> 
-    <title>Minim0- HTML5 Templete</title>
+    <title>Class 20 | Minim0</title>
 	
 	<!-- Bootstrap CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
