--- a/100section/class-24/index.html
+++ b/100section/class-24/index.html
@@ -106,7 +106,7 @@
 			items: 1,
 			loop: true,
 			nav: true,
-			navText: ["<i class='fa fa-long-arrow-left'</i>","<i class='fa fa-long-arrow-right'</i>"],
+			navText: ["<i class='fa fa-angle-left'</i>","<i class='fa fa-angle-right'</i>"],
 			dot: true,
 			autoplay: true,
 		    autoplayTimeout: 8000,
