--- a/100section/class-53/index.html
+++ b/100section/class-53/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class 53</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/medical-icon.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet" />
 </head>
@@ -113,5 +114,7 @@
 		</div>
 	</div>
 
+	<script src="js/jquery-1.12.4.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
